--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "nextjs-tailwind-event-landing-page",
+  "name": "gnac",
   "version": "1.0.0",
   "private": true,
-  "author": "Creative Tim",
-  "license": "See license in https://www.creative-tim.com/license",
-  "homepage": "https://demos.creative-tim.com/nextjs-tailwind-event-landing-page",
+  "author": "Shawn Dreifuss",
+  "homepage": "/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
